k3s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: podcast-ingress
spec:
  rules:
  - host: podcast.tino.sh
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: podcast-app-service
            port:
              number: 80
  tls:
  - hosts:
    - podcast.tino.sh
    secretName: podcast-tino-sh-tls
